Adding basic information; altering webpage formatting

--- a/src/app/crack-password-details/crack-password-details.component.html
+++ b/src/app/crack-password-details/crack-password-details.component.html
@@ -1,46 +1,64 @@
-<div class="grid-container" >
-    <mat-grid-list cols="2" rowHeight="350px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
+      <h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        Welcome to the world of Password Cracking!</h6>
+
+      <p style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        Below, you will find some of the basic terms and concepts that are used when discussing this field. </p>
+
+<div class="grid-container"  fxLayoutGap = "16px grid">
+    <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" fxLayoutGap = "16px grid">
+
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
-              Definition 1
+              Password
             </mat-card-title>
             <mat-card-content>
-              Password Cracking
+              <br>
+              <strong>String of characters that can be used to gain access to a system or service</strong>
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
-              Definition 2
+              Password Cracking
             </mat-card-title>
             <mat-card-content>
-              Password Cracking
+              <br>
+              <strong>Process of obtaining the password to an account using unauthorized means</strong>
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
-              Definition 3
+              Traits of a strong password
             </mat-card-title>
             <mat-card-content>
-              Password Cracking
+              <br>
+              <strong>Longer than 8 characters <br>
+              Uppercase and Lowercase Ideas <br>
+              Numbers and Special characters <br>
+              Avoid reusing a password <br>
+              Avoid easy-to-guess passwords (1234, password, etc.)</strong>
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
-              Defintion 4
+              Common Password Cracking Techniques
             </mat-card-title>
             <mat-card-content>
-              Password Cracking
+              <br>
+              <strong>Brute force <br>
+              Dictionary Search <br>
+              Phishing <br>
+              Malware <br></strong>
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+        <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
               List of Potential Defintions
@@ -77,6 +95,6 @@
               Malware
             </mat-card-content>
           </mat-card>
-      </mat-grid-tile>
+      </mat-grid-tile> -->
     </mat-grid-list>
 </div>
