--- a/src/app/encryption-details/encryption-details.component.html
+++ b/src/app/encryption-details/encryption-details.component.html
@@ -1,36 +1,121 @@
+      <h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        Welcome to the world of Encryption!</h6>
+
+      <p style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+        Below, you will find some of the basic terms that are used when discussing this field. </p>
+
 <div class="grid-container" >
-    <mat-grid-list cols="2" rowHeight="350px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
+    <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
+
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
-              Definition 1
+              Plaintext
             </mat-card-title>
             <mat-card-content>
-              Encryption
+              <br>
+              <strong>Ordinary, intelligible text, that is not formatted or written in code</strong>
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
-              Definition 2
+              Cipher
             </mat-card-title>
             <mat-card-content>
-              Encryption
+              <br>
+              <strong>An algorithm to encode and disguise plaintext, or to reveal encoded ciphertext</strong>
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
-              Definition 3
+              Ciphertext
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>Text that has been encrypted with the use of a cipher</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Encryption
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>The process of securing digital data by using mathematical algorithms to encode the information</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Keys
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>In encryption, it is a chunk of information, usually a random string of numbers or letters, that can be used to encode or decode data</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Hash
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>A value derived from a hashing encryption process that cannot be used to reverse engineer the original plaintext</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              MD5 (Message-Digest Algorithm)
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>A hashing algorithm that accepts a message as an input and returns a value as its output. That value can authenticate the original message.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Purposes of the MD5
+            </mat-card-title>
+            <mat-card-content>
+              <br>
+              <strong>MD5 has been used to verify that a file has been unaltered. It has also ben used to securely store passwords.</strong>
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+                <!-- <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Defintion 4
             </mat-card-title>
             <mat-card-content>
               Encryption
             </mat-card-content>
           </mat-card>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+                <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
+          <mat-card class = "colored-card">
+            <mat-card-title>
+              Defintion 4
+            </mat-card-title>
+            <mat-card-content>
+              Encryption
+            </mat-card-content>
+          </mat-card>
+        </mat-grid-tile>
+                <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
           <mat-card class = "colored-card">
             <mat-card-title>
               Defintion 4
@@ -60,6 +145,6 @@
               End-to-end Encryption
             </mat-card-content>
           </mat-card>
-        </mat-grid-tile>
+        </mat-grid-tile> -->
     </mat-grid-list>
 </div>
