--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,7 +1,15 @@
+<h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+  Thank you for taking the time to view this website!
+  <br>
+  The following people should be recognized for their contribution to
+  the senior project which included the creation of this website: </h6>
+
+
+
 <div class="grid-container" >
-    <mat-grid-list cols="2" rowHeight="350px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
+    <mat-grid-list cols="2" rowHeight="250px" fxFlexAlign="stretch" fxLayoutAlign="space-evenly center" >
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card>
+          <mat-card class="colored-card">
             <mat-card-title>
               Yana Kortsarts
             </mat-card-title>
@@ -11,7 +19,7 @@
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card>
+          <mat-card class = "colored-card">
             <mat-card-title>
               Lamar Brown
             </mat-card-title>
@@ -21,7 +29,7 @@
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card>
+          <mat-card class = "colored-card">
             <mat-card-title>
               Dominick Faust
             </mat-card-title>
@@ -31,7 +39,7 @@
           </mat-card>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1" style="margin-right: 100px;">
-          <mat-card>
+          <mat-card class = "colored-card">
             <mat-card-title>
               Matthew Savela
             </mat-card-title>
