Adding tabs to details pages.

--- a/src/app/crack-password-details/crack-password-details.component.html
+++ b/src/app/crack-password-details/crack-password-details.component.html
@@ -1,4 +1,8 @@
-      <h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
+<mat-tab-group class="tab-group">
+  <mat-tab label="General" class="mat-tab-labels">
+    <br><br>
+
+<h6 style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
         Welcome to the world of Password Cracking!</h6>
 
       <p style = "text-align: center; font-size: large; font-weight: bold; color: #00053E;">
@@ -98,3 +102,5 @@
       </mat-grid-tile> -->
     </mat-grid-list>
 </div>
+</mat-tab>
+</mat-tab-group>
